# energy-timeseries-real-anomaly-detection

./: .gitignore  LICENSE  README.md  pyproject.toml  report_analisi_critica_timeseries.html
configs/: example_config.yaml  real_ed14_arch_fm.yaml
examples/: run_demo.py  run_real_ed14.py
legacy/: anomaly_legacy.py  fetch_template.py  util_legacy.py
notebooks/: anomaly.ipynb  arima_grid.ipynb  arima_manual.ipynb  clustering.ipynb  lag_embedding.ipynb  prophet.ipynb  regression.ipynb  seasonality.ipynb  timeslots.ipynb  trends.ipynb
outputs/ED14_ARCH_FM_TotW/: clean_series.csv  feature_isolation_forest_scores.csv  isolation_forest.joblib  matrix_profile.csv  matrix_profile_discords.csv  matrix_profile_onsets.csv
src/tsad_feature/: __init__.py  cli.py  data.py  detectors.py  ensemble.py  features.py  forecast.py  matrix_profile.py  pipeline.py  plotting.py  real_data.py  report.py  windowing.py
src/tsad_feature.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_features.py  test_forecast.py  test_pipeline.py  test_real_data.py  test_windowing.py
